--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:background="#000"
+	android:background="@color/black"
 	android:orientation="vertical"
 	tools:context="tistory.zxcv5500.currencies.MainActivity"
 	>
@@ -25,7 +25,7 @@
 			android:layout_weight="30"
 			android:gravity="bottom"
 			android:text="Foreign Currency"
-			android:textColor="#ff22e9ff"
+			android:textColor="@color/turquoise"
 			/>
 
 		<Spinner
@@ -46,7 +46,7 @@
 			android:layout_weight="15"
 			android:gravity="bottom"
 			android:text="Enter foreign currency amount here:"
-			android:textColor="#666"
+			android:textColor="@color/grey_med"
 			android:textSize="12sp"
 			/>
 
@@ -69,11 +69,11 @@
 			android:layout_gravity="center_vertical"
 		    android:layout_marginLeft="5dp"
 		    android:layout_marginRight="5dp"
-		    android:background="#111"
+		    android:background="@color/grey_very_dark"
 		    android:digits="0123456789."
 		    android:gravity="center_vertical"
 		    android:inputType="numberDecimal"
-		    android:textColor="#FFF"
+		    android:textColor="@color/white"
 		    android:textSize="30sp"
 			>
 
@@ -107,7 +107,7 @@
 		    android:layout_weight="30"
 		    android:gravity="bottom"
 		    android:text="Home Currency"
-		    android:textColor="#ff22e9ff"
+		    android:textColor="@color/turquoise"
 			/>
 
 		<Spinner
@@ -127,7 +127,7 @@
 		    android:layout_weight="15"
 		    android:gravity="bottom"
 		    android:text="Calculated result in home crrency:"
-		    android:textColor="#666"
+		    android:textColor="@color/grey_med"
 		    android:textSize="12sp"
 			/>
 
