--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,13 +41,7 @@
 	</LinearLayout>
 
 	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-	    android:layout_marginLeft="10dp"
-	    android:layout_marginRight="10dp"
-	    android:layout_weight="20"
-	    android:background="@color/grey_dark"
-		>
+		style="@style/label_back">
 
 		<EditText
 			android:id="@+id/edt_amount"
@@ -108,13 +102,7 @@
 	</LinearLayout>
 
 	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="0dp"
-	    android:layout_marginLeft="10dp"
-	    android:layout_marginRight="10dp"
-	    android:layout_weight="20"
-	    android:background="@color/grey_dark"
-		>
+		style="@style/label_back">
 
 		<TextView
 			android:layout_width="match_parent"
