--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,13 @@
 		<item name="android:textSize">12sp</item>
 	</style>
 
+	<style name="label_back">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">0dp</item>
+		<item name="android:layout_marginLeft">10dp</item>
+		<item name="android:layout_marginRight">10dp</item>
+		<item name="android:layout_weight">20</item>
+		<item name="android:background">@color/grey_dark</item>
+	</style>
+
 </resources>
