--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,7 @@
 			/>
 
 		<Spinner
+			android:id="@+id/spn_hom"
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
 		    android:layout_marginLeft="10dp"
@@ -105,6 +106,7 @@
 		style="@style/label_back">
 
 		<TextView
+			android:id="@+id/txt_converted"
 			android:layout_width="match_parent"
 			android:layout_height="50dp"
 			android:layout_gravity="center_vertical"
