menu_main 메뉴 리소스 생성 누락분 추가

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,7 +6,7 @@
     tools:context=".MainActivity"
 	>
 	<item
-		android:id="mnu_codes"
+		android:id="@+id/mnu_codes"
 	    android:orderInCategory="100"
 	    app:showAsAction="never"
 	    android:title="search active codes"
