--- a/app/src/main/res/layout/spinner_close.xml
+++ b/app/src/main/res/layout/spinner_close.xml
@@ -9,6 +9,7 @@
           android:layout_height="match_parent"
           android:gravity="center_vertical"
           android:orientation="vertical"
+          android:ellipsize="marquee"
 	>
 
 </TextView>
